# FoodDelive-rs

./: Cargo.toml
src/: main.rs  rider.rs
