[package]
name = "foodora"
version = "0.1.0"
authors = ["Mirko Covizzi <mrkcvzz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.0"
clap = "2.33.0"
rand = "0.7.3"
log = "0.4.8"
simple_logger = "1.6.0"
